brain/sources/prod-metadata/objects/Template_Section__c/Template_Section__c.object-meta.xml
<CustomObject>
    <label>Template Section</label>
    <nameField>
        <displayFormat>TEMP-{00000}</displayFormat>
        <label>Template Section ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>