brain/sources/prod-metadata/objects/Template_Section__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Template Sections</relationshipLabel>
    <relationshipName>Template_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>