brain/sources/prod-metadata/objects/Template_Section__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Template Sections</relationshipLabel>
    <relationshipName>Template_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>